--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-carousel">
-            <div class="carousel-image active" style="background-image: url('images/home1.jpg')"></div>
-            <div class="carousel-image" style="background-image: url('images/home2.jpg')"></div>
-            <div class="carousel-image" style="background-image: url('images/home3.jpg')"></div>
-            <div class="carousel-image" style="background-image: url('images/home4.jpg')"></div>
-            <div class="carousel-image" style="background-image: url('images/home5.jpg')"></div>
+            <div class="carousel-image active" style="background-image: url('Images/home1.jpg')"></div>
+            <div class="carousel-image" style="background-image: url('Images/home2.jpg')"></div>
+            <div class="carousel-image" style="background-image: url('Images/home3.jpg')"></div>
+            <div class="carousel-image" style="background-image: url('Images/home4.jpg')"></div>
+            <div class="carousel-image" style="background-image: url('Images/home5.jpg')"></div>
         </div>
         <div class="carousel-overlay"></div>
         
@@ -408,3 +408,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
